--- a/src/assets/sass/pages/home.sass
+++ b/src/assets/sass/pages/home.sass
@@ -100,6 +100,15 @@
             transition: all .3s ease
             &:hover
                 box-shadow: 0 10px 15px -5px rgba(0, 0, 0, .5)
+            &-image
+                text-align: center
+                width: 70px
+                height: 70px
+                border-radius: 50%
+                display: flex
+                justify-content: center
+                align-items: center
+                margin: 0 auto 20px
 
 .icons
     svg
